# sparse_fourier_transform

./: .gitignore  CMakeLists.txt  README.md
block_sparse/: analyze_bsft.py  analyze_hikp.py  bsfft_plot.py  bsft.cc  bsft.h  bsft_tests.cc  coefs_plot.py  compare_filters.py  computefourier.cc  computefourier.h  deneb_precompute_locally.py  deneb_sbatch_experiment.py  deneb_sbatch_filter.py  deneb_sbatch_signals.py  deneb_sbatch_tuning.py  energy_plot.py  experiment_samples.cc  fftw.cc  fftw.h  fidis_precompute_locally.py  fidis_sbatch_signals.py  fidis_sbatch_tuning.py  filters.cc  filters.h  generate_signals.cc  heatmap.py  heatmap_bsft.py  heatmap_hikp.py  k_sparse_tuning.cc  make_sbatch_bsfft.py  make_sbatch_hikp.py  makefile  parameters.cc  plot_filter.py  precompute_filters.cc  run_experiment.cc  sbatch_hikp_parameters.py  signal_plot.py  utils.cc  utils.h
sFFT/: GNUmakefile  experiment  generate_graphs  kaiserbessel
